--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
  *
  * Made By MaterializeCSS.com
  */
+body, html {
+  font-family: 'Archivo', sans-serif;
+}
 
 nav ul a,
 nav .brand-logo {
@@ -16,24 +19,35 @@ p {
 }
 
 .sidenav-trigger {
-  color: #26a69a;
+  color: #e65100;
 }
 
 .parallax-container {
   min-height: 380px;
   line-height: 0;
   height: auto;
-  color: rgba(255,255,255,.9);
+  color: rgba(255, 255, 255, .9);
 }
-  .parallax-container .section {
-    width: 100%;
-  }
+
+.parallax-container .section {
+  width: 100%;
+}
+
+.blurry {
+  filter: blur(10px);
+}
+
+.bio-footer {
+  text-align: justify;
+  text-justify: inter-word;
+}
 
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
     top: 40%;
   }
+
   #index-banner .section {
     top: 10%;
   }
@@ -48,6 +62,7 @@ p {
 .icon-block {
   padding: 0 15px;
 }
+
 .icon-block .material-icons {
   font-size: inherit;
 }
